--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mediphor-login-server",
+  "name": "mediphor-node",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,9 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "aws-sdk": "^2.931.0",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
@@ -21,10 +18,6 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongoose": "^5.12.14",
-    "multer": "^1.4.2",
-    "multer-gridfs-storage": "^5.0.0",
-    "multiparty": "^4.2.2",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
