--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "serve-index": "^1.9.1"
-  },
-  "devDependencies": {
+    "serve-index": "^1.9.1",
     "cors": "^2.8.5"
-  }
+  },
+  "devDependencies": {}
 }
