--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "serve-index": "^1.9.1",
-    "cors": "^2.8.5"
+    "mongodb": "^4.0.0",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {}
 }
