--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongodb": "^4.0.0",
+    "mongojs": "^3.1.0",
     "serve-index": "^1.9.1"
-  },
-  "devDependencies": {}
+  }
 }
